--- a/public/styles.css
+++ b/public/styles.css
@@ -7,12 +7,12 @@ html {
   font-family: "Montserrat", sans-serif;
 }
 body {
-  background: #eee;
+  background: #faf2da;
   padding: 0 16px;
 }
 
 header {
-  background-color: #f5ba13;
+  background-color: #8e9775;
   margin: auto -16px;
   padding: 16px 32px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
@@ -90,7 +90,7 @@ form button {
   position: absolute;
   right: 18px;
   bottom: -18px;
-  background: #f5ba13;
+  background: #4a503d;
   color: #fff;
   border: none;
   border-radius: 50%;
